// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management list item component when item appears in view after image is loaded renders media broken icon when image onerror triggered 1`] = `
<gl-icon-stub
  class="text-secondary"
  name="media-broken"
  size="32"
/>
`;

exports[`Design management list item component with notes renders item with multiple comments 1`] = `
<router-link-stub
  ariacurrentvalue="page"
  class="card gl-cursor-pointer text-plain js-design-list-item design-list-item design-list-item-new gl-mb-0"
  event="click"
  tag="a"
  to="[object Object]"
>
  <div
    class="card-body gl-p-0 gl-display-flex gl-align-items-center gl-justify-content-center gl-overflow-hidden gl-relative"
  >
    <!---->
     
    <gl-intersection-observer-stub
      class="gl-flex-grow-1"
    >
      <!---->
       
      <img
        alt="test"
        class="gl-display-block gl-mx-auto gl-max-w-full gl-max-h-full gl-w-auto design-img"
        data-qa-filename="test"
        data-qa-selector="design_image"
        data-testid="design-img-1"
        src=""
      />
    </gl-intersection-observer-stub>
  </div>
   
  <div
    class="card-footer gl-display-flex gl-w-full"
  >
    <div
      class="gl-display-flex gl-flex-direction-column str-truncated-100"
    >
      <span
        class="gl-font-weight-bold str-truncated-100"
        data-qa-selector="design_file_name"
        data-testid="design-img-filename-1"
        title="test"
      >
        test
      </span>
       
      <span
        class="str-truncated-100"
      >
        
        Updated 
        <timeago-stub
          cssclass=""
          datetimeformat="DATE_WITH_TIME_FORMAT"
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="gl-ml-auto gl-display-flex gl-align-items-center gl-text-gray-500"
    >
      <gl-icon-stub
        class="gl-ml-2"
        name="comments"
        size="16"
      />
       
      <span
        aria-label="2 comments"
        class="gl-ml-2"
      >
        
        2
      
      </span>
    </div>
  </div>
</router-link-stub>
`;

exports[`Design management list item component with notes renders item with single comment 1`] = `
<router-link-stub
  ariacurrentvalue="page"
  class="card gl-cursor-pointer text-plain js-design-list-item design-list-item design-list-item-new gl-mb-0"
  event="click"
  tag="a"
  to="[object Object]"
>
  <div
    class="card-body gl-p-0 gl-display-flex gl-align-items-center gl-justify-content-center gl-overflow-hidden gl-relative"
  >
    <!---->
     
    <gl-intersection-observer-stub
      class="gl-flex-grow-1"
    >
      <!---->
       
      <img
        alt="test"
        class="gl-display-block gl-mx-auto gl-max-w-full gl-max-h-full gl-w-auto design-img"
        data-qa-filename="test"
        data-qa-selector="design_image"
        data-testid="design-img-1"
        src=""
      />
    </gl-intersection-observer-stub>
  </div>
   
  <div
    class="card-footer gl-display-flex gl-w-full"
  >
    <div
      class="gl-display-flex gl-flex-direction-column str-truncated-100"
    >
      <span
        class="gl-font-weight-bold str-truncated-100"
        data-qa-selector="design_file_name"
        data-testid="design-img-filename-1"
        title="test"
      >
        test
      </span>
       
      <span
        class="str-truncated-100"
      >
        
        Updated 
        <timeago-stub
          cssclass=""
          datetimeformat="DATE_WITH_TIME_FORMAT"
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="gl-ml-auto gl-display-flex gl-align-items-center gl-text-gray-500"
    >
      <gl-icon-stub
        class="gl-ml-2"
        name="comments"
        size="16"
      />
       
      <span
        aria-label="1 comment"
        class="gl-ml-2"
      >
        
        1
      
      </span>
    </div>
  </div>
</router-link-stub>
`;
